#14 post-show with bookmark working

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,9 @@
             "@env/*": [
                 "environments/*"
             ],
+            "@models/*": [
+                "app/models/*"
+            ],
             "@store/*": [
                 "app/store/*"
             ]
