--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngx-translate/core": "^14.0.0",
     "firebase": "^9.6.10",
     "moment": "^2.29.2",
+    "ngx-material-file-input": "^3.0.0",
     "ngx-moment": "^6.0.2",
     "ngx-tinymce": "^13.0.0",
     "rxjs": "~7.5.5",
