--- a/package.json
+++ b/package.json
@@ -1,56 +1,58 @@
 {
-  "name": "ng13material",
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "ng serve -o",
-    "ng": "ng",
-    "prod": "ng build",
-    "build": "ng build  --configuration production --aot --vendor-chunk --common-chunk --delete-output-path --build-optimizer  --stats-json",
-    "analyze": "webpack-bundle-analyzer dist\\ng13material\\stats.json",
-    "server": "http-server dist/ng13matske",
-    "start": "ng serve",
-    "test": "ng test",
-    "watch": "ng build --watch --configuration development"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~13.3.2",
-    "@angular/cdk": "~13.3.2",
-    "@angular/common": "~13.3.2",
-    "@angular/compiler": "~13.3.2",
-    "@angular/core": "~13.3.2",
-    "@angular/fire": "^7.3.0",
-    "@angular/flex-layout": "^13.0.0-beta.38",
-    "@angular/forms": "~13.3.2",
-    "@angular/material": "~13.3.2",
-    "@angular/material-moment-adapter": "^13.3.2",
-    "@angular/platform-browser": "~13.3.2",
-    "@angular/platform-browser-dynamic": "~13.3.2",
-    "@angular/router": "~13.3.2",
-    "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
-    "@ngx-translate/core": "^14.0.0",
-    "firebase": "^9.6.10",
-    "moment": "^2.29.2",
-    "ngx-material-file-input": "^3.0.0",
-    "ngx-moment": "^6.0.2",
-    "ngx-tinymce": "^13.0.0",
-    "rxjs": "~7.5.5",
-    "tslib": "^2.3.1",
-    "zone.js": "~0.11.5"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.2",
-    "@angular/cli": "~13.3.2",
-    "@angular/compiler-cli": "~13.3.2",
-    "@types/jasmine": "~4.0.2",
-    "@types/node": "^17.0.23",
-    "jasmine-core": "~4.0.1",
-    "karma": "~6.3.17",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~4.0.2",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.3",
-    "webpack-bundle-analyzer": "^4.5.0"
-  }
+    "name": "ng13material",
+    "version": "0.0.0",
+    "scripts": {
+        "dev": "ng serve -o",
+        "ng": "ng",
+        "prod": "ng build",
+        "build": "ng build  --configuration production --aot --vendor-chunk --common-chunk --delete-output-path --build-optimizer  --stats-json",
+        "analyze": "webpack-bundle-analyzer dist\\ng13material\\stats.json",
+        "server": "http-server dist/ng13matske",
+        "start": "ng serve",
+        "test": "ng test",
+        "watch": "ng build --watch --configuration development"
+    },
+    "private": true,
+    "dependencies": {
+        "-": "^0.0.1",
+        "@angular/animations": "~13.3.11",
+        "@angular/cdk": "~13.3.8",
+        "@angular/common": "~13.3.11",
+        "@angular/compiler": "~13.3.11",
+        "@angular/core": "~13.3.11",
+        "@angular/fire": "^7.3.0",
+        "@angular/flex-layout": "^13.0.0-beta.38",
+        "@angular/forms": "~13.3.11",
+        "@angular/material": "~13.3.8",
+        "@angular/material-moment-adapter": "^13.3.8",
+        "@angular/platform-browser": "~13.3.11",
+        "@angular/platform-browser-dynamic": "~13.3.11",
+        "@angular/router": "~13.3.11",
+        "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
+        "@ngx-translate/core": "^14.0.0",
+        "firebase": "^9.8.2",
+        "moment": "^2.29.3",
+        "ngx-material-file-input": "^3.0.0",
+        "ngx-moment": "^6.0.2",
+        "ngx-tinymce": "^13.0.0",
+        "ngx-webcam": "^0.4.1",
+        "rxjs": "~7.5.5",
+        "tslib": "^2.4.0",
+        "zone.js": "~0.11.5"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~13.3.7",
+        "@angular/cli": "~13.3.7",
+        "@angular/compiler-cli": "~13.3.11",
+        "@types/jasmine": "~4.0.3",
+        "@types/node": "^17.0.38",
+        "jasmine-core": "~4.1.1",
+        "karma": "~6.3.20",
+        "karma-chrome-launcher": "~3.1.1",
+        "karma-coverage": "~2.2.0",
+        "karma-jasmine": "~5.0.1",
+        "karma-jasmine-html-reporter": "~2.0.0",
+        "typescript": "~4.6.3",
+        "webpack-bundle-analyzer": "^4.5.0"
+    }
 }
